INitial commit afted added artemis, mysql-central, dbsync-central and openmrs-central conteiner on project